# entrecore-server

./: .gitignore  README.md  architecture.md  architecture_per_role.md
auth_service/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  dockerREADME.md  pyproject.toml  requirements.txt
auth_service/auth_service/: README.md  alembic.ini  alembic.md  database.py  main.py  models.py
auth_service/auth_service/migrations/: README  env.py
auth_service/auth_service/migrations/versions/: 92db595dec6e_initial_migration.py  d50a773474d2_add_first_name_and_last_name_columns.py
auth_service/postman/: auth_api_endpoints.json  auth_api_tests.json
auth_service/scripts/: README.md  test_auth_flow_script.py
auth_service/tests/: README.md  docker_test_auth_flow.py  test_auth_flow.py
data_ingestion_service/: .env.example  Dockerfile  Entrecore-Punch Epic 1 (1).xlsx  README.md  requirements.txt  task_flow.md
data_ingestion_service/ingestion_service/: main.py
data_ingestion_service/ingestion_service/connectors/: base.py  factory.py
data_ingestion_service/ingestion_service/connectors/netsuite/: connector.py
data_ingestion_service/ingestion_service/examples/: connector_usage.py
data_ingestion_service/ingestion_service/middleware/: auth.py
entrecore_auth_core/: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
entrecore_auth_core/src/entrecore_auth_core/: __init__.py  auth_models.py
entrecore_auth_core/tests/: test_models.py
