[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "Authentication microservice"
authors = ["Anthony Oliko <anthonyoliko@punch.agency>"]
packages = [
    {include = "auth_service"}
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.23.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic = "^2.3.0"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"
entrecore-auth-core = {git = "https://github.com/punchagency/entrecore-server.git", subdirectory = "entrecore_auth_core"}
alembic = "^1.15.1"
pytest = "^7.4.0"
httpx = "^0.27.0"
mysqlclient = "^2.1.1"
pymysql = "^1.0.2"
google-auth = "2.19.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
